[gd_scene load_steps=40 format=2]

[ext_resource path="res://Goblin/Goblin.gd" type="Script" id=1]
[ext_resource path="res://Goblin/art/idle_1.png" type="Texture" id=2]
[ext_resource path="res://Goblin/art/idle_2.png" type="Texture" id=3]
[ext_resource path="res://Goblin/art/idle_3.png" type="Texture" id=4]
[ext_resource path="res://Goblin/art/attack_1.png" type="Texture" id=5]
[ext_resource path="res://Goblin/art/attack_2.png" type="Texture" id=6]
[ext_resource path="res://Goblin/art/attack_3.png" type="Texture" id=7]
[ext_resource path="res://Goblin/art/attack_4.png" type="Texture" id=8]
[ext_resource path="res://Goblin/art/attack_5.png" type="Texture" id=9]
[ext_resource path="res://Goblin/art/attack_6.png" type="Texture" id=10]
[ext_resource path="res://Goblin/art/attack_7.png" type="Texture" id=11]
[ext_resource path="res://Goblin/art/walk_1.png" type="Texture" id=12]
[ext_resource path="res://Goblin/art/walk_2.png" type="Texture" id=13]
[ext_resource path="res://Goblin/art/walk_3.png" type="Texture" id=14]
[ext_resource path="res://Goblin/art/walk_4.png" type="Texture" id=15]
[ext_resource path="res://Goblin/art/walk_5.png" type="Texture" id=16]
[ext_resource path="res://Goblin/art/walk_6.png" type="Texture" id=17]
[ext_resource path="res://Goblin/art/death_1.png" type="Texture" id=18]
[ext_resource path="res://Goblin/art/death_2.png" type="Texture" id=19]
[ext_resource path="res://Goblin/art/death_3.png" type="Texture" id=20]
[ext_resource path="res://Goblin/art/death_4.png" type="Texture" id=21]
[ext_resource path="res://Goblin/art/death_5.png" type="Texture" id=22]
[ext_resource path="res://Goblin/art/death_6.png" type="Texture" id=23]
[ext_resource path="res://Goblin/art/death_7.png" type="Texture" id=24]
[ext_resource path="res://Goblin/art/death_8.png" type="Texture" id=25]
[ext_resource path="res://Goblin/States/Idle.gd" type="Script" id=26]
[ext_resource path="res://Goblin/States/Stagger.gd" type="Script" id=27]
[ext_resource path="res://Goblin/States/Walk.gd" type="Script" id=28]
[ext_resource path="res://Goblin/States/Death.gd" type="Script" id=29]
[ext_resource path="res://Goblin/States/Attack.gd" type="Script" id=30]
[ext_resource path="res://Util/DamegeAreaFix.tscn" type="PackedScene" id=31]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 20.1198, 30.1164 )

[sub_resource type="Animation" id=2]

resource_name = "Attack"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Body:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Attack" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 7 ]
}

[sub_resource type="Animation" id=3]

resource_name = "Death"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Body:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Death" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 8 ]
}

[sub_resource type="Animation" id=4]

resource_name = "Idle"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Body:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 3 ]
}

[sub_resource type="Animation" id=5]

resource_name = "Stagger"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Body:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Stagger" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 2 ]
}

[sub_resource type="Animation" id=6]

resource_name = "Walk"
length = 1.5
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Body:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Walk" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 6 ]
}

[sub_resource type="SpriteFrames" id=7]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 4 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 11 ) ],
"loop": true,
"name": "Attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 17 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 19 ) ],
"loop": true,
"name": "Stagger",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 25 ) ],
"loop": true,
"name": "Death",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=8]

custom_solver_bias = 0.0
extents = Vector2( 24, 33 )

[node name="Goblin" type="KinematicBody2D" index="0"]

input_pickable = false
collision_layer = 8
collision_mask = 3
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "collision" ]

[node name="Tween" type="Tween" parent="." index="0"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 0, 12 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Pivot" type="Position2D" parent="." index="2"]

editor/display_folded = true
_sections_unfolded = [ "Transform" ]

[node name="Animation" type="AnimationPlayer" parent="Pivot" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Attack = SubResource( 2 )
anims/Death = SubResource( 3 )
anims/Idle = SubResource( 4 )
anims/Stagger = SubResource( 5 )
anims/Walk = SubResource( 6 )
blend_times = [  ]

[node name="Body" type="AnimatedSprite" parent="Pivot" index="1"]

scale = Vector2( 0.2, 0.2 )
frames = SubResource( 7 )
animation = "Idle"
_sections_unfolded = [ "Transform" ]

[node name="DamageSpot" type="Position2D" parent="." index="3"]

[node name="States" type="Node" parent="." index="4"]

editor/display_folded = true

[node name="Idle" type="Node" parent="States" index="0"]

script = ExtResource( 26 )

[node name="Stagger" type="Node" parent="States" index="1"]

script = ExtResource( 27 )

[node name="Walk" type="Node" parent="States" index="2"]

script = ExtResource( 28 )

[node name="Death" type="Node" parent="States" index="3"]

script = ExtResource( 29 )

[node name="Attack" type="Node" parent="States" index="4"]

script = ExtResource( 30 )

[node name="Left" type="RayCast2D" parent="." index="5"]

position = Vector2( -25, 20 )
rotation = 1.5708
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 10 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="Right" type="RayCast2D" parent="." index="6"]

position = Vector2( 25, 20 )
rotation = -1.5708
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 10 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="LeftDown" type="RayCast2D" parent="." index="7"]

position = Vector2( -25, 25 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 30 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="RightDown" type="RayCast2D" parent="." index="8"]

position = Vector2( 25, 25 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 30 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="Area2D" parent="." index="9" instance=ExtResource( 31 )]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D" index="0"]

position = Vector2( 0, 12 )
shape = SubResource( 8 )
_sections_unfolded = [ "Transform" ]

[connection signal="animation_finished" from="Pivot/Animation" to="." method="_on_Animation_animation_finished"]


